# AGE

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  auto-build.sh  throughput_test.conf
benchmark/: README.md
benchmark/query/amazon/cypher/ac/: ac1.cyp  ac2.cyp  ac3.cyp  ac4.cyp  ac5.cyp  ac6.cyp  ac7.cyp
benchmark/query/amazon/cypher/as/: as1.cyp  as2.cyp  as3.cyp  as4.cyp  as5.cyp
cmake/: deps.cmake  third-party.cmake
config/: conf.ini  conf.ini.cache  conf.ini.compute  master_nodes.txt  schema  worker_nodes.txt
example_graph/raw_data/: edge.csv  vertex.csv
model/: env.py  model.py  model_sample.py  model_search.py  model_sl.py  select_workload.py  serve.py  simple_buffer.py  state.py  supervised_train.py  utils.py  w2v_model.py
scripts/: AGE_admin.py  activate-thpt.sh  clang-format.py  cpplint.py  data_importer.py  deactivate-thpt.sh  lint.py  restart-servers-w-model.sh  restart-servers.sh  server_status.sh  start-servers-w-model.sh  start-servers.sh  stop-servers.sh
src/: CMakeLists.txt
src/base/: aggregation.cc  aggregation.h  expr_func.h  expr_util.h  expression.h  graph_entity.h  interval.h  intervals.cc  intervals.h  item.h  math.h  memory_manager.cc  memory_manager.h  node.h  proj_util.h  rdma.h  row.h  serializer.h  thpt_metrics.h  type.cc  type.h
src/base/rdmalib/: rdmaio.hpp  utils.hpp
src/base/test/: test_expr.cc  test_filter.cc  test_intervals.cc  test_mem_manager.cc  test_type.cc
src/execution/: barrier_util.h  cache_executor.h  compute_executor.h  cpu_affinity.h  execution_stage.cc  execution_stage.h  execution_stage_type.h  execution_strategy.h  graph_tool.h  mailbox.cc  mailbox.h  mailbox_scheduler.h  message.cc  message.h  message_header.h  monitor.h  msg_dispatcher.h  numeric_monitor.h  op_profiler.h  physical_plan.cc  physical_plan.h  qc_databuffer.h  query_coordinator.cc  query_coordinator.h  query_meta.h  query_scheduler.h  rdma_mailbox.h  result_collector.h  standalone_executor.h  thpt_handler.h
src/execution/test/: test_mailbox.cc  test_message.cc  test_standalone_executor.cc
src/gremlin/: CMakeLists.txt  filter_translator.h  op_translator.h  plan_checker.h  plan_translator.h  rpc_server.cc  rpc_server.h  rpc_tester.cc  step_translator.h
src/gremlin/proto/: gremlin.proto
src/model/: buffer.h  op_exec_time.h  opt_target.h  ring_buffer.h  rl_action.h  rl_state.h  simple_buffer.h  util.h
src/operator/: abstract_op.h  aggregate_global_op.h  aggregate_local_op.h  aggregate_op.h  barrier_projection_global_op.h  barrier_projection_local_op.h  barrier_projection_op.h  base_barrier_op.h  branch_filter_entry_op.h  count_op.h  end_op.h  expand_cc_op.h  expand_cn_op.h  expand_into_op.h  expand_nc_op.h  expand_nn_op.h  expand_op.cc  expand_op.h  expand_ul_op.h  filter_op.h  index_op.h  index_scan_op.h  init_op.h  loop_op.h  op_type.h  ops.h  optional_match_op.h  project_op.h  property_op.h  subquery_entry_op.h  subquery_util.h  vertex_scan_op.h
src/operator/distinct/: global_distinctor.h  local_distinctor.h
src/operator/test/: test_aggregation.cc  test_expand.cc  test_expand_into.cc  test_optional_match.cc  test_projection.cc  test_property_op.cc  test_subquery_op.cc  test_vertex_scan_op.cc
src/plan/: ast.h  ast_helper.cc  ast_helper.h  col_assigner.h  expand_builder.h  op_params.cc  op_params.h  pattern_graph.cc  pattern_graph.h  physical_plan_builder.cc  physical_plan_builder.h  physical_plan_optimizer.h  plan_graph.cc  plan_graph.h  plan_graph_optimizer.h  planner.h  planner_exception.h  semantic_checker.h  type.h  var_map.h  var_prop_intervals.h
src/plan/test/: test_cypher.cc  test_index.cc
src/proto/: base.proto  cache_worker.proto  client.proto  compute_worker.proto  master.proto
src/server/: CMakeLists.txt  cache_worker.cc  cache_worker.h  cache_worker_rpc_server.h  client.cc  client.h  client_rpc_server.h  compute_worker.cc  compute_worker.h  compute_worker_rpc_server.h  console_util.cc  console_util.h  master.cc  master.h  master_rpc_server.h  standalone.cc  standalone.h
src/storage/: CMakeLists.txt  abstract_id_mapper.h  adj_list_store.h  b_tree.h  e_prop_store.h  general_histogram.h  graph.h  graph_loader.cc  graph_loader.h  hash_id_mapper.h  hash_table.h  id_mapper.h  index_store.h  layout.h  load_data.cc  meta_store.h  red_black_tree.cc  red_black_tree.h  schema.h  seq_table.h  str_map.h  unique_namer.h  v_prop_store.h
src/storage/test/: test_b_tree.cc  test_red_black_tree.cc  test_storage.cc
src/test/: CMakeLists.txt  run_tests_main.cc  test_distributed_query.cc  test_query.cc  test_tbb.cc  test_tool.cc  test_tool.h  thpt_async_tester.h  throughput_test_async_main.cc
src/util/: brpc_helper.h  config.h  dictionary.h  iniparser.h  thpt_test_config.h  thpt_test_helper.cc  thpt_test_helper.h  tool.h
